Mathis fix: 500 px for map-details on pc waas way too much

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -73,7 +73,7 @@
 .map-details-computer {
     @extend .map-details;
     height: 100vh;
-    width: 500px;
+    width: 400px;
     display: flex !important;
     flex-direction: column;
 }
